Add a settings menu for smart devices

--- a/application/res/qtquickcontrols2.conf
+++ b/application/res/qtquickcontrols2.conf
@@ -5,5 +5,5 @@ Style=Material
 Theme=Dark
 Accent=DarkOrange
 Primary=Blue
-Foreground=Green
-Background=#D7D7D7
+Foreground=White
+Background="darkGray"
